--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,8 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
-                "${file}",
+                "${file}"
+                "Etudiant.cpp",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
